@@ -48,8 +48,10 @@ hiroshi . kimura . 0331 @ gmail . com, ~a,
 " VERSION))
 
 (define (users)
-  (let ((all (query-list sql3 "select name from users")))
-    (filter (lambda (s) (not (regexp-match #rx"^imac" s))) all)))
+  (query-list sql3 "select name from users order by cat desc,name"))
+
+(define (only-people)
+  (filter (lambda (s) (not (regexp-match #rx"^imac" s))) (users)))
 
 (define (now)
   (string-split (query-value sql3 "select datetime('now','localtime')")))
@@ -107,9 +109,10 @@ hiroshi . kimura . 0331 @ gmail . com, ~a,
 (define (string-join-with sep strings)
   (string-join (interpose sep strings)))
 
+;;FIXME, not DRY
 (define (users-wifi)
-  (let ((q (string-join-with "or" (map (lambda (s) (format "name='~a'" s)) (users)))))
-    (query-list sql3 (format "select wifi from users where ~a" q))))
+  (let ((q (string-join-with "or" (map (lambda (s) (format "name='~a'" s)) (only-people)))))
+    (query-list sql3 (format "select wifi from users where ~a order by cat desc, name" q))))
 
 (define (dates-all)
   (query-list sql3 "select distinct(date) from mac_addrs order by date desc"))
@@ -185,7 +188,9 @@ hiroshi . kimura . 0331 @ gmail . com, ~a,
      (with-output-to-string
        (lambda ()
          (displayln "<ul>")
-         (for ([u (query-list sql3 "select name from users")])
+         ;;
+         ;; (for ([u (query-list sql3 "select name from users")])
+         (for ([u (users)])
            (displayln (format "<li class='~a'><a href='/user/~a'>~a</a></li>"
                               (if (status? u) "red" "black")
                               u (j u))))
